# BeeKeeper

./: pyproject.toml
examples/mcdonalds/adapters/: excel_allocation_input_adapter.py  excel_entity_input_adapter.py
src/beekeeper/: __init__.py
src/beekeeper/adapters/: allocation_input_adapter.py  input_adapter.py
src/beekeeper/adapters/inputs/: allocation_context_input_adapter.py  allocation_input_adapter.py  entity_input_adapter.py  input_adapter.py  mixed_input_adapter.py
src/beekeeper/adapters/outputs/: output_adapter.py
src/beekeeper/allocations/: allocation_request.py  allocation_type.py  planned_allocation.py
src/beekeeper/data_structures/: abstract_enum.py
src/beekeeper/employee_manager/: employee_manager_data_store.py
src/beekeeper/employees/: employee.py  extra_employee_info.py
src/beekeeper/entities/: entity.py  entity_properties.py
src/beekeeper/inavailabilities/: inavailability.py
src/beekeeper/interfaces/: base_employee_data_store.py  base_employee_manager.py
src/beekeeper/time_constructs/: date_range.py
